# VoxelEngine

./: CMakeLists.txt  main.cpp
lib/glad/: glad.h
src/: glad.c  main.cpp
src/shaders/: shader.vert
